--- a/config.json
+++ b/config.json
@@ -10,5 +10,9 @@
       "port"    : 9000,
       "path"    : "/"
     }
-  }
+  },
+  "testFiles": [
+    "js/jquery.js",
+    "js/underscore.js"
+  ]
 }
